--- a/_config.yml
+++ b/_config.yml
@@ -30,7 +30,7 @@ author_bio: Hi, my name is Alejandro Lechuga and this is personal site.
 author_email: "mail@sujaykundu.com"
 author_location: India
 author_website_url: "https://sujaykundu.com"
-typewrite-text: devlopr is a jekyll framework built for developers. You can edit this in _config.yml file
+typewrite-text:  Hi, my name is Alejandro Lechuga and this is personal site You can edit this in _config.yml file
 hero_cover_img: sample_cover.jpg # replace this for changing homepage cover (eg. try cover.jpeg). Image should be in /assets/img
 
 # Experiences
